Closed Bug 189228 Opened 22 years ago Closed 22 years ago

typeahead find not finding words (text mode) in web page

Categories

(SeaMonkey :: Find In Page, defect)

defect
Not set
major

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: blizzard, Assigned: aaronlev)

References

()

Details

(Keywords: regression)

Attachments

(1 file)

1. Load up http://www.mozilla.org
2. Type '/' to look for text
3. Try to type out 'features'

It should find it in the text of the web page.  It isn't, even though that text
is clearly in the text of the page.

This is a recent regression over the last couple of days.
This wfm 2003111308/linux.
eek, text-mode for find as you type seems to be utterly broken on all platforms.

regressed btwn the 2003.01.13.08 and 2003.01.14.12 builds.
Severity: normal → major
Keywords: nsbeta1
OS: Linux → All
Hardware: PC → All
Summary: regression: typeahead find not finding words in web page → typeahead find not finding words (text mode) in web page
looks like only link mode works, even if you hit /. (fortunately, the find in
page dlg still works fine for text.)
Works on 2003011208, broke on 2002011412.  Win98.  I'll look for possible
patches that could have broke this.
aaronl backed out several checkins (bug 176296, bug 187511 and bug 183998), but
i'm not sure he backed out the change for 187301, if that one would be involved...
Still broken 2003011508.
I believe Aaron backed out part or all of this patch because in certain
scenarios it was preventing users from typing single quotes (') and slashes (/).
 This is really annoying since the workaround are to either copy/paste those
characters or to quit and try again but without opening the Edit menu.  Aaron
will likely work on addressingn these issues/bugs next week.
This was due to the fact that I only partially backed out bug 176296, because in
that patch I changed the way the / or ' initialize type ahead find.

When we get that in, this will be fixed.
Depends on: 176296
Seems to be still broken (build 2003012008).

Works partially, if I have autostart and start typing (and find) a link, _then_
I can press / and get to text search, but neither / nor ' work when the
type-ahead find is not already active.

Any estimate when this will be fully working again?
well as Aaron said, it depends on bug 176296. I see that was checked in
yesterday, so this should be fixed in today's (20030121xx) builds.
this works ok for me again in 2003012108/win2k.
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Request reopen.  Only partially fixed on win98 2003012108.  Much of the time
this works fine, but then it surprises you by going back to the old links-only
search.  Here's my best attempt to reproduce, which usually works:

1.  Go to http://forums.gardenweb.com/forums/
2.  Type "/forum"
3.  Press F3 until you are on a link
4.  Reload the page
5.  Type "/forum"

Expected result:
You are positioned to the text forum right at the top of the page.

Actual result:
You are positioned to the first link containing the word forum

The status bar says that it is going to find text as you type, but then it only
finds links.
*** Bug 190012 has been marked as a duplicate of this bug. ***
Reopening for Ian's testcase in comment #12

This bug is still 90% fixed, but after a repeated find, as in Ian's testcase,
there can be a problem getting back into text search. Will attach patch to take
care of this issue.
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
Attachment #112334 - Flags: superreview?(Henry.Jia)
Attachment #112334 - Flags: review?(kyle.yuan)
Attachment #112334 - Flags: review?(kyle.yuan) → review+
Attachment #112334 - Flags: superreview?(Henry.Jia) → superreview+
Attachment #112334 - Flags: approval1.3b?
Comment on attachment 112334 [details] [diff] [review]
Clear repeat mode when a new search is started. This will prevent later code from thinking it needs to reset the find again.

a=asa (on behalf of drivers) for checkin to 1.3beta.
Attachment #112334 - Flags: approval1.3b? → approval1.3b+
checked in yesterday
Status: REOPENED → RESOLVED
Closed: 22 years ago22 years ago
Resolution: --- → FIXED
I just tried the 1/24 build.  The default behavior before was that if you just
start typing you search for links, if you type / first then you search all text.  
However, the first one doesn't work.  It doesn't search on links when you start
typing.  Typing / does in fact search on all text on the page.  

Is this the correct functionality?  What happened to the link search?
That's weird. Check your prefs.js file to see if
accessibility.typeaheadfind.autostart has changed.

Also, if you type ' before your text does it search for links then?

If that's true, it sounds like you have autostart set to false.

YOu can also check the pref in Prefs -> Advanced -> Keyboard Navigation. Thre's
a checkbox related to this pref there.
You're absolutely right. Sorry to whine about it.  Thanks for the fix.  
Appears fixed.  Will let you know if anything odd shows up.
vrfy'd fixed with 2003.02.10 comm trunk bits on win2k, mac 10.2.3 and linux rh8.0.
Status: RESOLVED → VERIFIED
Product: Core → SeaMonkey
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: