Bug 189228. Find as you type text search not working after repeated find. r=kyle, sr=henry jia